fixed wrap

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,7 @@ body {
     background: #D8C3A5;
     margin: 50px;
     padding: 30px;
-    width: 50%;
+    width: 60%;
     line-height: 35px;
     border: 2px solid #389683;
 }
